[workspace]
members = [
    "rgeometry-cloudflare",
    "rgeometry-demo",
    "rgeometry-demo-simple",
    "rgeometry-demo-random-convex",
]
resolver = "2"

[workspace.package]
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true
