[package]
name = "rgeometry-cloudflare"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.9", default-features = false, optional = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
leptos = { version = "0.7.0", default-features = false }
leptos_axum = { version = "0.7.2", default-features = false, optional = true }
leptos_macro = { version = "0.7.2", default-features = false }
log = "0.4.22"
tower = { version = "0.5.0", optional = true }
tower-service = { version = "0.3.3", optional = true }
wasm-bindgen = "0.2.99"
worker = { version = "0.5.0", features = ["http", "axum"], optional = true }
reqwest = { version = "0.12.11", features = ["json"] }
rfd = "0.15.1"
leptos_meta = { version = "0.7.2", default-features = false }
wasmi = "0.40.0"
anyhow = "1.0.95"
svg = "0.18.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.134"
web-time = "1.1.0"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_macro/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_axum/wasm",
    "leptos_meta/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:worker",
    "dep:tower",
    "dep:tower-service",
]

[dev-dependencies]
wat = "1.0"
